--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <div class="business-card">
 
-<img src="IMG_20241027_190403.jpg" alt="business-card" class="profile-pic">
+<img src="mukhangtite.jpg" alt="business-card" class="profile-pic">
 
 <div class="card-content">
 
